New test - TC-TEST

--- a/TC-Test.html
+++ b/TC-Test.html
@@ -37,6 +37,26 @@
 	<td></td>
 </tr>
 <tr>
+	<td>click</td>
+	<td>//ng-pills-ui-router/div/div[2]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>//ng-pills-ui-router/div/div[3]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>//ng-pills-ui-router/div/div[4]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>//ng-pills-ui-router/div/div[5]</td>
+	<td></td>
+</tr>
+<tr>
 	<td></td>
 	<td></td>
 	<td></td>
