Test cases change
after was change page code

--- a/TC-admin_dashboard_checkout.html
+++ b/TC-admin_dashboard_checkout.html
@@ -198,27 +198,27 @@
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
-	<td>css=td.strong &gt; div.ng-binding.ng-scope</td>
+	<td>//td/div/div/a</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
-	<td>css=span.ng-binding.ng-scope</td>
+	<td>//td[2]/div/div/span</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
-	<td>//td[3]/div/span</td>
+	<td>//td[3]/div/div/span</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
-	<td>//td[4]/div/span</td>
+	<td>//td[4]/div/div/span</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
-	<td>//td[5]/div/span</td>
+	<td>//td[5]/div/div/span</td>
 	<td></td>
 </tr>
 <tr>
@@ -238,22 +238,22 @@
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
-	<td>//tr[10]/td[2]/div/span</td>
+	<td>//tr[10]/td[2]/div/div/span</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
-	<td>//tr[10]/td[3]/div/span</td>
+	<td>//tr[10]/td[3]/div/div/span</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
-	<td>//tr[10]/td[4]/div/span</td>
+	<td>//tr[10]/td[4]/div/div//span</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
-	<td>//tr[10]/td[5]/div/span</td>
+	<td>//tr[10]/td[5]/div/div/span</td>
 	<td></td>
 </tr>
 <tr>
@@ -301,7 +301,6 @@
 	<td>link=Sign Out</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
