--- a/TC-Expand_Collapse_Case_page_of_admin.html
+++ b/TC-Expand_Collapse_Case_page_of_admin.html
@@ -152,6 +152,16 @@
 	<td>matter</td>
 </tr>
 <tr>
+	<td>type</td>
+	<td>//dashboard-list-cases/div/div/div/input</td>
+	<td>${matter}</td>
+</tr>
+<tr>
+	<td>verifyElementPresent</td>
+	<td>//td[3]/div</td>
+	<td>${matter}</td>
+</tr>
+<tr>
 	<td>storeText</td>
 	<td>//td/div</td>
 	<td>CASE</td>
@@ -163,52 +173,42 @@
 </tr>
 <tr>
 	<td>storeText</td>
-	<td>//td[8]/div/span</td>
+	<td>//td[8]/div/div/span</td>
 	<td>CollectionStatus</td>
 </tr>
 <tr>
 	<td>storeText</td>
-	<td>//td[9]/div/span</td>
+	<td>//td[9]/div/div/span</td>
 	<td>HostingStatus</td>
 </tr>
 <tr>
 	<td>storeText</td>
-	<td>//td[10]/div/span</td>
+	<td>//td[10]/div/div/span</td>
 	<td>ReviewStatus</td>
 </tr>
 <tr>
 	<td>storeText</td>
-	<td>//td[11]/div/span</td>
+	<td>//td[11]/div/div/span</td>
 	<td>TranslationStatus</td>
 </tr>
 <tr>
 	<td>storeText</td>
-	<td>//td[12]/div/span</td>
+	<td>//td[12]/div/div/span</td>
 	<td>DepositionServices</td>
 </tr>
 <tr>
 	<td>storeText</td>
-	<td>//td[2]/div</td>
+	<td>//td[2]/div/div/a</td>
 	<td>ClientName</td>
 </tr>
 <tr>
 	<td>storeText</td>
-	<td>//td[6]/div/button</td>
+	<td>//td[6]/div/div/button</td>
 	<td>CasePM</td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>//dashboard-list-cases/div/div/div/input</td>
-	<td>${matter}</td>
-</tr>
-<tr>
-	<td>verifyElementPresent</td>
-	<td>//td[3]/div</td>
-	<td>${matter}</td>
-</tr>
-<tr>
 	<td>click</td>
-	<td>//td[2]/div</td>
+	<td>//td/div/div/a</td>
 	<td></td>
 </tr>
 <tr>
