--- a/TC-Internal_Users_count_check.html
+++ b/TC-Internal_Users_count_check.html
@@ -58,7 +58,7 @@
 </tr>
 <tr>
 	<td>storeText</td>
-	<td>//div/div/div/div/p</td>
+	<td>//div[2]/div/div[3]</td>
 	<td></td>
 </tr>
 <tr>
@@ -68,7 +68,7 @@
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//div/div/div/div/p</td>
+	<td>//div[2]/div/div/div/div/span</td>
 	<td>${ExternalUsers}${Items}</td>
 </tr>
 <tr>
@@ -81,7 +81,6 @@
 	<td>link=Sign Out</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
