--- a/TC-active_clients_count_check.html
+++ b/TC-active_clients_count_check.html
@@ -33,7 +33,7 @@
 </tr>
 <tr>
 	<td>waitForVisible</td>
-	<td>//ng-table-select-count/div/div/span</td>
+	<td>//div/div/div/div/span</td>
 	<td></td>
 </tr>
 <tr>
@@ -48,17 +48,17 @@
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//div/div/div/div/p</td>
+	<td>//div/div/div/div/span</td>
 	<td>${ActiveClients}${Items}</td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>//tr[8]/td[2]/div</td>
+	<td>//nav-bar-user-info/div/div/div</td>
 	<td></td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>link=Sign Out</td>
+	<td>//li[2]/a</td>
 	<td></td>
 </tr>
 </tbody></table>
