--- a/TC-425-add-combine-two-companies-to-one.html
+++ b/TC-425-add-combine-two-companies-to-one.html
@@ -63,7 +63,7 @@
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//div/div/div/div/span</td>
+	<td>//td/div/div/a</td>
 	<td>${MergeClientName}</td>
 </tr>
 <tr>
@@ -87,13 +87,8 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyElementPresent</td>
-	<td>//li[3]/a</td>
-	<td></td>
-</tr>
-<tr>
 	<td>click</td>
-	<td>//li[3]/a</td>
+	<td>//div[3]/ul/li[2]/a</td>
 	<td></td>
 </tr>
 <tr>
@@ -151,7 +146,6 @@
 	<td>link=Sign Out</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
