--- a/TC-Add_remove_company_in_case.html
+++ b/TC-Add_remove_company_in_case.html
@@ -48,12 +48,12 @@
 </tr>
 <tr>
 	<td>waitForVisible</td>
-	<td>//td/div</td>
+	<td>//td/div/div/a</td>
 	<td></td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>//td/div</td>
+	<td>//td/div/div/a</td>
 	<td></td>
 </tr>
 <tr>
@@ -93,12 +93,12 @@
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
-	<td>//td[2]/div/span</td>
+	<td>//td[2]/div/div//span</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
-	<td>//div/div/div/div/p</td>
+	<td>//div/div/div/div/span</td>
 	<td></td>
 </tr>
 <tr>
@@ -123,7 +123,7 @@
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
-	<td>//clients-case/div/div</td>
+	<td>//clients-case/div/div/div</td>
 	<td></td>
 </tr>
 <tr>
@@ -163,12 +163,12 @@
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//td/div/span</td>
+	<td>//div/div/a/span</td>
 	<td>${ClientName1}</td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>//ng-table-tls/div/div[1]/table/tbody/tr[1]/td[2]/div/div</td>
+	<td>//ng-table-tls/div/div[1]/table/tbody/tr[1]/td[2]/div/div/div</td>
 	<td></td>
 </tr>
 <tr>
