--- a/478-bug-cloning-groups.html
+++ b/478-bug-cloning-groups.html
@@ -162,9 +162,24 @@
 	<td></td>
 </tr>
 <tr>
+	<td>click</td>
+	<td>//tr[2]/td/div/div/a</td>
 	<td></td>
-	<td></td>
-	<td></td>
+</tr>
+<tr>
+	<td>verifyText</td>
+	<td>//edit-text/div/div/span</td>
+	<td>${orig_grp_name}${groups_copy}</td>
+</tr>
+<tr>
+	<td>verifyText</td>
+	<td>//edit-text-area/div/div/span</td>
+	<td>${orig_grp_desc}</td>
+</tr>
+<tr>
+	<td>verifyText</td>
+	<td>//div[2]/div/div/p</td>
+	<td>${orig_grp_usr_count} items</td>
 </tr>
 <tr>
 	<td>click</td>
