--- a/TC-425-add-combine-two-companies-to-one.html
+++ b/TC-425-add-combine-two-companies-to-one.html
@@ -17,6 +17,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>waitForElementPresent</td>
+	<td>//sign-in/div/div[2]</td>
+	<td></td>
+</tr>
+<tr>
 	<td>type</td>
 	<td>name=password</td>
 	<td>123456</td>
