--- a/TC-Login_Validation.html
+++ b/TC-Login_Validation.html
@@ -17,6 +17,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>waitForElementPresent</td>
+	<td>//sign-in/div/div[2]</td>
+	<td></td>
+</tr>
+<tr>
 	<td>type</td>
 	<td>name=email</td>
 	<td>admin@admin.c</td>
@@ -181,7 +186,6 @@
 	<td>link=Sign Out</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
