--- a/TC-default.html
+++ b/TC-default.html
@@ -17,6 +17,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>waitForElementPresent</td>
+	<td>//sign-in/div/div[2]</td>
+	<td></td>
+</tr>
+<tr>
 	<td>type</td>
 	<td>name=password</td>
 	<td>123456</td>
@@ -46,7 +51,6 @@
 	<td>link=Sign Out</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
