--- a/TS-admin-tests.html
+++ b/TS-admin-tests.html
@@ -19,6 +19,7 @@
 <tr><td><a href="TC-Add_remove_company_in_case.html">441-add-remove-company-in-case</a></td></tr>
 <tr><td><a href="TC-425-add-combine-two-companies-to-one.html">425-add-combine-two-companies-to-one</a></td></tr>
 <tr><td><a href="478-bug-cloning-groups.html">478-bug-cloning-groups</a></td></tr>
+<tr><td><a href="TC-Client-User-Activation.html">TC-Client-User-Activation</a></td></tr>
 </tbody></table>
 </body>
 </html>
