--- a/478-bug-cloning-groups.html
+++ b/478-bug-cloning-groups.html
@@ -167,6 +167,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>waitForElementPresent</td>
+	<td>//td/div</td>
+	<td></td>
+</tr>
+<tr>
 	<td>verifyText</td>
 	<td>//edit-text/div/div/span</td>
 	<td>${orig_grp_name}${groups_copy}</td>
