--- a/TC-Client-User-Activation.html
+++ b/TC-Client-User-Activation.html
@@ -22,8 +22,13 @@
 	<td>Last Name</td>
 </tr>
 <tr>
-	<td>storeText</td>
-	<td>//form/div[1]/div[2]/div[2]/div[1]/div/input</td>
+	<td>store</td>
+	<td>1</td>
+	<td>personal_email</td>
+</tr>
+<tr>
+	<td>storeValue</td>
+	<td>//body/app/div/sign-up/div/div[2]/form/div[1]/div[2]/div[2]/div[1]/div/input</td>
 	<td>personal_email</td>
 </tr>
 <tr>
@@ -44,7 +49,7 @@
 <tr>
 	<td>type</td>
 	<td>name=addressLine2</td>
-	<td>Address line1</td>
+	<td>Address line2</td>
 </tr>
 <tr>
 	<td>click</td>
@@ -158,10 +163,9 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>css=div.control-checkbox_indicator</td>
+	<td>//button</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
