--- a/TC-Client-User-Activation.html
+++ b/TC-Client-User-Activation.html
@@ -12,6 +12,61 @@
 <tr><td rowspan="1" colspan="3">TC-Client-User-Activation</td></tr>
 </thead><tbody>
 <tr>
+	<td>storeText</td>
+	<td>//one-company/div[1]/div[1]/div/div/span</td>
+	<td>CompanyName</td>
+</tr>
+<tr>
+	<td>storeText</td>
+	<td>//info-company/div/div/div/div/div[2]/div/div[2]/span</td>
+	<td>CompanyAdress</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>//nav-bar-user-info/div/div/div</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>//li/a</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForElementPresent</td>
+	<td>//div/div/div[2]/div[2]/div[2]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>//a[3]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForElementPresent</td>
+	<td>//tbody[10]/tr/td[2]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>//td/i</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForElementPresent</td>
+	<td>//ng-transclude/div/table/tbody[1]/tr[2]/td/table/tbody/tr[7]/td[2]/div/table/tbody/tr/td/p[3]/a/span</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>//ng-transclude/div/table/tbody[1]/tr[2]/td/table/tbody/tr[7]/td[2]/div/table/tbody/tr/td/p[3]/a/span</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForElementPresent</td>
+	<td>//div/div[2]/form/div[4]/div[2]/div/div[4]/div/label</td>
+	<td></td>
+</tr>
+<tr>
 	<td>type</td>
 	<td>//input</td>
 	<td>First Name</td>
@@ -44,7 +99,7 @@
 <tr>
 	<td>type</td>
 	<td>name=addressLine1</td>
-	<td>Address line1</td>
+	<td>${CompanyAdress}</td>
 </tr>
 <tr>
 	<td>type</td>
@@ -109,7 +164,7 @@
 <tr>
 	<td>type</td>
 	<td>name=yourTitle</td>
-	<td>Your title </td>
+	<td>${CompanyName}</td>
 </tr>
 <tr>
 	<td>type</td>
@@ -164,6 +219,81 @@
 <tr>
 	<td>click</td>
 	<td>//button</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>css=a.primary-link &gt; span.ng-binding</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>css=a.primary-link &gt; span.ng-binding</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>//ng-pills-ui-router/div/div[3]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>//ng-pills/div/div[3]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>//tr[4]/td[2]/div/div/span</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>//button[2]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>name=question</td>
+	<td>Qw</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>name=question</td>
+	<td>Qa</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>name=answer</td>
+	<td>Qa</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>//button[@type='submit']</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>css=span.ng-binding</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>//info-company/div/div/div</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>css=div.nav-bar-user-info_dropdown.dropdown-toggle</td>
+	<td></td>
+</tr>
+<tr>
+	<td></td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>//info-company/div/div/div</td>
 	<td></td>
 </tr>
 </tbody></table>
